fix height overflow

--- a/src/app/adicionar-user/adicionar-user.component.scss
+++ b/src/app/adicionar-user/adicionar-user.component.scss
@@ -1,12 +1,7 @@
 .main{
-  width: 100%;
-  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-
-
-
     .header{
       background-color: rgb(197, 200, 198);
       width: 100%;
@@ -29,7 +24,7 @@
       display: flex;
       flex-direction: column;
       margin: auto;
-      margin-top: 15px;
+      margin-top: 10px;
 
       input{
         box-shadow: 0 5px 8px rgb(0 0 0 / 10%);
