--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,12 +4,22 @@
   justify-content: space-between;
   height: 100%;
 
+
   ::ng-deep app-home{
+    height: inherit !important;
+    display: flex;
+    align-items: center;
+
+  }
+
+  ::ng-deep app-adicionar-user{
     height: inherit !important;
   }
 
  ::ng-deep app-gerenciar-user{
     height: inherit !important;
+    display: flex;
+    align-items: baseline;
   }
 
   ::ng-deep app-calendario{
