--- a/src/app/gerenciar-user/gerenciar-user.component.scss
+++ b/src/app/gerenciar-user/gerenciar-user.component.scss
@@ -1,9 +1,13 @@
 .main {
+  height: 63vh;
   width: 100%;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: baseline;
+
   .header {
     background-color: rgb(197, 200, 198);
-    margin: auto;
+    width: 100%;
 
     h3 {
       font-size: 35px;
@@ -13,8 +17,7 @@
       border-bottom: 1px;
       border-color: rgb(197, 197, 197);
       border-style: solid;
-      width: 93%;
-      margin: auto;
+
     }
 
     margin-bottom: 10px;
@@ -36,46 +39,21 @@
       font-size: 16px;
     }
   }
-  .input-group{
-    width: 90%;
-    margin: auto;
-    padding-bottom: 35px;
-  }
-  .has-search .form-control {
-    padding-left: 2.375rem;
-  }
-
-  .has-search .form-control-feedback {
-    position: absolute;
-    z-index: 2;
-    display: block;
-    width: 2.375rem;
-    height: 2.375rem;
-    line-height: 2.375rem;
-    text-align: center;
-    pointer-events: none;
-    color: #aaa;
-  }
-
-  .btn{
-    background-color: rgb(5, 5, 242);
-  }
-
-
 }
 
 .body {
   display: flex;
   flex-direction: column;
+  height: 83%;
   overflow: auto;
-  height: 88%;
   .accordion {
     margin: 0px 0 0px 0;
 
     .accordion-button {
       background-color: white;
-      margin: auto auto 5px auto;
-      width: 93%;
+      margin-left: 2vw;
+      margin-bottom: 2vh;
+      width: 90%;
       padding: 10px 20px 10px 20px;
       border-bottom: 1px;
       border-style: solid;
